# pexel-downloader

./: .gitignore  README.md  pyproject.toml
.github/: README.md
.github/scripts/: bump_version.py
.github/workflows/: ci.yml  publish.yml
examples/: download_images.py  download_videos.py
pexel_downloader/: __init__.py  __main__.py  cli.py  client.py  config.py  constants.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py
